examples/nextjs-commerce/packages/spree/dist/errors/AccessTokenError.js
class AccessTokenError extends Error {
}
export { AccessTokenError as default };
